test/corpus/expressions.txt
===
C-style comment
===
1 /* ... */ + 2
---

(document
  (binary
    left: (number)
    (comment)
    operator: (additive)
    right: (number)))

===
array (empty)
===
[]
---

(document
  (array))

===
array (without trailing comma)
===
[true, false]
---

(document
  (array
    (boolean)
    (boolean)))

===
array (with trailing comma)
===
[true, false,]
---

(document
  (array
    (boolean)
    (boolean)))

===
asserted expression
===
assert true; false
---

(document
  (asserted_expr
    (assert
      condition: (boolean))
    (boolean)))

===
boolean (true)
===
true
---

(document
  (boolean))

===
boolean (false)
===
false
---

(document
  (boolean))

===
conditional
===
if x then y else z
---

(document
  (conditional
    condition: (var_ref_id)
    consequence: (var_ref_id)
    alternative: (var_ref_id)))

===
local (var binding)
===
local x = 1; x
---

(document
  (local
    (bindings
      (binding
        variable: (var_id)
        (number)))
    (var_ref_id)))

===
local (function binding)
===
local f(p) = p;
f
---

(document
  (local
    (bindings
      (binding
        function: (var_id)
        (params
          (param
            (var_id)))
        (var_ref_id)))
    (var_ref_id)))

===
local (multiple bindings)
===
local x = 1, y = 2;
x + y
---

(document
  (local
    (bindings
      (binding
        variable: (var_id)
        (number))
      (binding
        variable: (var_id)
        (number)))
    (binary
      left: (var_ref_id)
      operator: (additive)
      right: (var_ref_id))))

===
null
===
null
---

(document
  (null))

===
number
===
[
  0, 1,
  0b00, 0b11,
  0o00, 0o77,
  0x00, 0xff,
  1e-10, 1.5e+2,
  3e6, 30e6, 1.0e7, 7.2e6
]
---

(document
  (array
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)))

===
binary (additive)
===
1 + 2
---

(document
  (binary
    left: (number)
    operator: (additive)
    right: (number)))

===
binary (precedence: multiplicative over additive)
===
1 + 2 * 3
---

(document
  (binary
    left: (number)
    operator: (additive)
    right: (binary
      left: (number)
      operator: (multiplicative)
      right: (number))))

===
binary (left associative)
===
1 - 2 - 3
---

(document
  (binary
    left: (binary
      left: (number)
      operator: (additive)
      right: (number))
    operator: (additive)
    right: (number)))

===
binary (logical precedence: and over or)
===
a && b || c
---

(document
  (binary
    left: (binary
      left: (var_ref_id)
      operator: (and)
      right: (var_ref_id))
    operator: (or)
    right: (var_ref_id)))

===
field access
===
x.y
---

(document
  (field_access
    object: (var_ref_id)
    field: (field_ref_id)))

===
field access (chained)
===
x.y.z
---

(document
  (field_access
    object: (field_access
      object: (var_ref_id)
      field: (field_ref_id))
    field: (field_ref_id)))

===
index
===
x[0]
---

(document
  (index
    object: (var_ref_id)
    index: (number)))

===
slice (start and end)
===
x[1:2]
---

(document
  (index
    object: (var_ref_id)
    (slice
      start: (number)
      end: (number))))

===
slice (step only)
===
x[::2]
---

(document
  (index
    object: (var_ref_id)
    (slice
      step: (number))))

===
unary (logical not)
===
!true
---

(document
  (unary
    operator: (unary_operator)
    operand: (boolean)))

===
unary (bitwise not)
===
~x
---

(document
  (unary
    operator: (unary_operator)
    operand: (var_ref_id)))

===
unary (negative number)
===
-1
---

(document
  (unary
    operator: (unary_operator)
    operand: (number)))

===
unary binds looser than field access
===
-x.y
---

(document
  (unary
    operator: (unary_operator)
    operand: (field_access
      object: (var_ref_id)
      field: (field_ref_id))))

===
mixed postfix chain
===
a.b[0].c
---

(document
  (field_access
    object: (index
      object: (field_access
        object: (var_ref_id)
        field: (field_ref_id))
      index: (number))
    field: (field_ref_id)))

===
array comprehension
===
[x for x in y]
---

(document
  (array_comp
    (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))))

===
array comprehension (with if)
===
[x for x in y if x]
---

(document
  (array_comp
    (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))
    (if_spec
      (var_ref_id))))

===
array comprehension (nested for)
===
[x for x in y for z in w]
---

(document
  (array_comp
    (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))
    (for_spec
      (var_id)
      (var_ref_id))))

===
array comprehension (trailing comma after expression)
===
[x, for x in y]
---

(document
  (array_comp
    (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))))

===
super field access
===
super.x
---

(document
  (field_access
    object: (super)
    field: (field_ref_id)))

===
super index
===
super[e]
---

(document
  (index
    object: (super)
    index: (var_ref_id)))

===
error
===
error "boom"
---

(document
  (error
    expression: (quoted_string
      (string_start)
      (string_content)
      (string_end))))

===
error (expression operand)
===
error 1 + 2
---

(document
  (error
    expression: (binary
      left: (number)
      operator: (additive)
      right: (number))))

===
parenthesized expression
===
(1 + 2)
---

(document
  (parenthesized
    expression: (binary
      left: (number)
      operator: (additive)
      right: (number))))

===
parenthesized callee
===
(f)(x)
---

(document
  (call
    (parenthesized
      expression: (var_ref_id))
    (arguments
      (argument
        (var_ref_id)))))

===
named call argument
===
f(1, a=2)
---

(document
  (call
    (var_ref_id)
    (arguments
      (argument
        (number))
      (argument
        name: (param_ref_id)
        (number)))))

===
C-style comment (closing slash abutting)
===
1000/* 4 hours */
---

(document
  (number)
  (comment))
