test/corpus/import.txt
===
import
===
import "lib.libsonnet"
---

(document
  (import
    (import_kind)
    (quoted_string
      (string_start)
      (string_content)
      (string_end))))

===
importstr
===
importstr "data.txt"
---

(document
  (import
    (import_kind)
    (quoted_string
      (string_start)
      (string_content)
      (string_end))))

===
importbin
===
importbin "blob.bin"
---

(document
  (import
    (import_kind)
    (quoted_string
      (string_start)
      (string_content)
      (string_end))))

===
import (verbatim string path)
===
import @'raw.jsonnet'
---

(document
  (import
    (import_kind)
    (quoted_string
      (string_start)
      (string_content)
      (string_end))))

===
import (in local binding)
===
local lib = import "lib.libsonnet"; lib
---

(document
  (local
    (bindings
      (binding
        variable: (var_id)
        (import
          (import_kind)
          (quoted_string
            (string_start)
            (string_content)
            (string_end)))))
    (var_ref_id)))

===
import (text block path is rejected)
:error
===
import |||
  lib.libsonnet
|||
---



===
import (computed path is rejected)
:error
===
import ("foo" + ".libsonnet")
---
