test/corpus/object.txt
===
object (empty)
===
{}
---

(document
  (object))

===
object (single field)
===
{a: 1}
---

(document
  (object
    (field
      key: (static_key
        (field_id))
      visibility: (visibility)
      value: (number))))

===
object (multiple fields with trailing comma)
===
{a: 1, b: 2,}
---

(document
  (object
    (field
      key: (static_key
        (field_id))
      visibility: (visibility)
      value: (number))
    (field
      key: (static_key
        (field_id))
      visibility: (visibility)
      value: (number))))

===
object (string fieldname)
===
{"key": 1}
---

(document
  (object
    (field
      key: (static_key
        (quoted_string
          (string_start)
          (string_content)
          (string_end)))
      visibility: (visibility)
      value: (number))))

===
object (computed fieldname)
===
{[x]: 1}
---

(document
  (object
    (field
      key: (computed_key
        expression: (var_ref_id))
      visibility: (visibility)
      value: (number))))

===
object (hidden fields)
===
{a:: 1, b::: 2}
---

(document
  (object
    (field
      key: (static_key
        (field_id))
      visibility: (visibility)
      value: (number))
    (field
      key: (static_key
        (field_id))
      visibility: (visibility)
      value: (number))))

===
object (merge field)
===
{a+: 1}
---

(document
  (object
    (field
      key: (static_key
        (field_id))
      inherit: (inherit)
      visibility: (visibility)
      value: (number))))

===
object (method sugar)
===
{f(x): x}
---

(document
  (object
    (field
      key: (static_key
        (field_id))
      parameters: (params
        (param
          (var_id)))
      visibility: (visibility)
      body: (var_ref_id))))

===
object (local member)
===
{local y = 1, a: y}
---

(document
  (object
    (object_local
      (binding
        variable: (var_id)
        (number)))
    (field
      key: (static_key
        (field_id))
      visibility: (visibility)
      value: (var_ref_id))))

===
object (assert member)
===
{assert true, a: 1}
---

(document
  (object
    (assert
      condition: (boolean))
    (field
      key: (static_key
        (field_id))
      visibility: (visibility)
      value: (number))))

===
object comprehension
===
{[k]: v for k in keys}
---

(document
  (object_comp
    key: (computed_key
      expression: (var_ref_id))
    value: (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))))

===
object comprehension (with if)
===
{[k]: v for k in keys if k}
---

(document
  (object_comp
    key: (computed_key
      expression: (var_ref_id))
    value: (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))
    (if_spec
      (var_ref_id))))

===
object comprehension (additive inherit)
===
{[k]+: v for k in keys}
---

(document
  (object_comp
    key: (computed_key
      expression: (var_ref_id))
    value: (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))))

===
object comprehension (leading local)
===
{local z = 1, [k]: z for k in keys}
---

(document
  (object_comp
    (object_local
      (binding
        variable: (var_id)
        (number)))
    key: (computed_key
      expression: (var_ref_id))
    value: (var_ref_id)
    (for_spec
      (var_id)
      (var_ref_id))))

===
object comprehension (trailing local)
===
{[k]: v, local y = 1 for k in ks}
---

(document
  (object_comp
    key: (computed_key
      expression: (var_ref_id))
    value: (var_ref_id)
    (object_local
      (binding
        variable: (var_id)
        (number)))
    (for_spec
      (var_id)
      (var_ref_id))))

===
object comprehension (locals before and after)
===
{local x = 0, [k]: v, local y = 1 for k in ks}
---

(document
  (object_comp
    (object_local
      (binding
        variable: (var_id)
        (number)))
    key: (computed_key
      expression: (var_ref_id))
    value: (var_ref_id)
    (object_local
      (binding
        variable: (var_id)
        (number)))
    (for_spec
      (var_id)
      (var_ref_id))))

===
object composition
===
base { b: 2 }
---

(document
  (object_apply
    target: (var_ref_id)
    object: (object
      (field
        key: (static_key
          (field_id))
        visibility: (visibility)
        value: (number)))))

===
object composition (object literal target)
===
{a: 1} { b: 2 }
---

(document
  (object_apply
    target: (object
      (field
        key: (static_key
          (field_id))
        visibility: (visibility)
        value: (number)))
    object: (object
      (field
        key: (static_key
          (field_id))
        visibility: (visibility)
        value: (number)))))

===
object composition (comprehension body)
===
x { [k]: v for k in ks }
---

(document
  (object_apply
    target: (var_ref_id)
    object: (object_comp
      key: (computed_key
        expression: (var_ref_id))
      value: (var_ref_id)
      (for_spec
        (var_id)
        (var_ref_id)))))

===
object composition (chained)
===
a { b: 1 } { c: 2 }
---

(document
  (object_apply
    target: (object_apply
      target: (var_ref_id)
      object: (object
        (field
          key: (static_key
            (field_id))
          visibility: (visibility)
          value: (number))))
    object: (object
      (field
        key: (static_key
          (field_id))
        visibility: (visibility)
        value: (number)))))
