test/corpus/quoted_string.txt
===
double-quoted string
===
"hello"
---

(document
  (string
    (quoted_string
      (string_content))))

===
single-quoted string
===
'hello'
---

(document
  (string
    (quoted_string
      (string_content))))

===
empty string
===
""
---

(document
  (string
    (quoted_string)))

===
string with escape sequences
===
"line\ntab\tcr\r"
---

(document
  (string
    (quoted_string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence))))

===
string with escaped quote
===
"a\"b"
---

(document
  (string
    (quoted_string
      (string_content)
      (escape_sequence)
      (string_content))))

===
string with unicode escape
===
"\u00e9"
---

(document
  (string
    (quoted_string
      (escape_sequence))))

===
verbatim double-quoted string
===
@"c:\path"
---

(document
  (string
    (quoted_string
      (string_content))))

===
verbatim single-quoted string
===
@'raw'
---

(document
  (string
    (quoted_string
      (string_content))))

===
verbatim string with doubled quote
===
@"say ""hi"""
---

(document
  (string
    (quoted_string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence))))

===
verbatim string with consecutive escaped quotes
===
@""""""
---

(document
  (string
    (quoted_string
      (escape_sequence)
      (escape_sequence))))

===
multi-line double-quoted string
===
"line one
line two"
---

(document
  (string
    (quoted_string
      (string_content))))

===
multi-line single-quoted string
===
'line one
line two'
---

(document
  (string
    (quoted_string
      (string_content))))

===
multi-line verbatim double-quoted string
===
@"line one
line two"
---

(document
  (string
    (quoted_string
      (string_content))))

===
multi-line verbatim single-quoted string
===
@'line one
line two'
---

(document
  (string
    (quoted_string
      (string_content))))

===
invalid escape sequence
:error
===
"a\vb"
---



===
invalid unicode escape
:error
===
"\uzzzz"
---



===
trailing backslash
:error
===
"abc\"
---



===
all valid simple escape sequences
===
"\"\\\/\b\f\n\r\t"
---

(document
  (string
    (quoted_string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

===
string content followed by escape
===
"abc\n"
---

(document
  (string
    (quoted_string
      (string_content)
      (escape_sequence))))

===
escape followed by string content
===
"\nabc"
---

(document
  (string
    (quoted_string
      (escape_sequence)
      (string_content))))

===
string content surrounding an escape
===
"ab\ncd"
---

(document
  (string
    (quoted_string
      (string_content)
      (escape_sequence)
      (string_content))))

===
escapes surrounding string content
===
"\nab\tcd\n"
---

(document
  (string
    (quoted_string
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence))))

===
verbatim double-quoted string mixing content and doubled quote
===
@"a""b"
---

(document
  (string
    (quoted_string
      (string_content)
      (escape_sequence)
      (string_content))))

===
verbatim single-quoted string mixing content and doubled quote
===
@'a''b'
---

(document
  (string
    (quoted_string
      (string_content)
      (escape_sequence)
      (string_content))))
