test/corpus/text_block.txt
===
text block (single line)
===
|||
  x
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
text block (multiple lines)
===
|||
  a
  b
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
text block with trailing dash on the start fence
===
|||-
  x
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
text block with trailing whitespace on the start fence
===
|||   
  x
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
text block with tab indentation
===
|||
	x
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
leading empty line before the initial indentation
===
|||

  x
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_blank_line)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
leading whitespace-only line defines the indentation
===
|||
 
  hi
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
leading whitespace-only line wider than the content indentation
:error
===
|||
    
  hi
|||
---



===
in-block empty blank line
===
|||
  x

  y
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_blank_line)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
in-block whitespace-only blank line
:error
===
|||
    x
  
    y
|||
---



===
lines with longer indentation
===
|||
  x
    y
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
content containing the fence delimiter
===
|||
  a|||b
|||
---

(document
  (text_block
    (text_block_start)
    (text_block_indent)
    (text_block_line_content)
    (text_block_end)))

===
text block following a token on the same line
===
"x" + /* ... */ |||
  hi
|||
---

(document
  (binary
    left: (quoted_string
      (string_start)
      (string_content)
      (string_end))
    operator: (additive)
    (comment)
    right: (text_block
      (text_block_start)
      (text_block_indent)
      (text_block_line_content)
      (text_block_end))))

===
text block opening on its own line after a token
===
[
  |||
    hi
  |||,
]
---

(document
  (array
    (text_block
      (text_block_start)
      (text_block_indent)
      (text_block_line_content)
      (text_block_end))))
